Fix Safari 9 layout issues and bump some contrast

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,7 +15,7 @@ $large-screen: 'min-width: 1500px';
 $brand-color: #F26322;
 $body-font-color: #333;
 
-$light-gray-color: #F4F6F5;
+$light-gray-color: #F1F1F1;
 $beige-color: #CAC3B4;
 
 $footer-color: #A6ABB0;
