--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -8,16 +8,17 @@ html,body {
 
 body {
   min-height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
 }
 
 #gl-wrapper {
   flex: 1;
+  background: #fff;
 }
 
 .main-container {
-  background: #fff;
   padding: 0 0 50px 0;
   min-height: 100%;
   clear: both; /* SRJ - fix Firefox bug */
